--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,1 +1,39 @@
 /* global.scss */
+.MuiSlider-valueLabel {
+    line-height: 1.2;
+    font-size: 12px;
+    background-color: #52af77;
+    color: white;
+    padding: 4px;
+    width: 32px;
+    height: 32px;
+    text-align: center;
+    border-radius: 0 0 0 0; // Rounded top corners only
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%) scale(0);
+    transform-origin: bottom center;
+  
+    &.MuiSlider-valueLabelOpen {
+      transform: translateX(-50%) scale(1);
+    }
+  
+    &::before {
+      display: none;
+    }
+  
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -6px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 0;
+      height: 0;
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-top: 6px solid #52af77;
+    }
+  }
+  
